--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A modern landing page template built with **HTML, SCSS, and JavaScript** featuring:\r ✔ Glassmorphism design  \r ✔ Light/Dark mode switcher  \r ✔ Responsive layout  \r ✔ Smooth scroll & scroll progress bar  \r ✔ Animations on scroll  \r ✔ Neon hover effects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-css": "sass scss/main.scss css/style.css --no-source-map --style=compressed",
+    "watch-css": "sass --watch scss/main.scss css/style.css",
+    "dev": "npm run watch-css"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +14,5 @@
   "type": "commonjs",
   "devDependencies": {
     "sass": "^1.89.2"
-  },
-  "scripts": {
-    "build-css": "sass scss/main.scss css/style.css --no-source-map --style=compressed",
-    "watch-css": "sass --watch scss/main.scss css/style.css"
   }
 }
