--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A modern landing page template built with **HTML, SCSS, and JavaScript** featuring:\r ✔ Glassmorphism design  \r ✔ Light/Dark mode switcher  \r ✔ Responsive layout  \r ✔ Smooth scroll & scroll progress bar  \r ✔ Animations on scroll  \r ✔ Neon hover effects",
   "main": "index.js",
   "scripts": {
-    "build-css": "sass scss/main.scss css/style.css --no-source-map --style=compressed",
-    "watch-css": "sass --watch scss/main.scss css/style.css",
+    "build-css": "sass scss/main.scss dist/css/style.css --no-source-map --style=compressed",
+    "watch-css": "sass --watch scss/main.scss:dist/css/style.css",
     "dev": "npm run watch-css"
   },
   "keywords": [],
